root/k8s/portfolio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  ports:
    - protocol: TCP
      port: 8100 # พอร์ตที่ Ingress จะเรียก
      targetPort: 8100 # พอร์ตที่ส่งต่อไปหา Docker
---
apiVersion: v1
kind: Endpoints
metadata:
  name: portfolio-service
subsets:
  - addresses:
      - ip: 172.17.0.1 # IP ของเครื่อง Host ที่มองจาก Docker/K8s
    ports:
      - port: 8100
