root/k8s/ingress-portfolio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    # ไม่ใส่ rewrite-target เพราะเราจะเข้าหน้าเว็บตรงๆ
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nanthawat.elitefund.fun
      secretName: event-seat-tls
  rules:
    - host: nanthawat.elitefund.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 8100
